refactor: Reset passowrd
